# firstPlugin

./: .gitignore  CMakeLists.txt
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: PluginProcessor.cpp
